# bidsbuilder

./: .buildinfo  .buildinfo.bak  .gitignore  README.md  TODO.txt  api.html  bidsbuilder.html  bidsbuilder.interpreter.html  bidsbuilder.modules.html  bidsbuilder.util.html  checks.py  convertBids.py  correspondance.txt  filebase_info.txt  generatemodel.py  genindex.html  index.html  modules.html  notes.txt  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  to_remove.py  usage.html
Bids_Converter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Demo/: convertBids.py
_autosummary/: bidsbuilder.interpreter.evaluation_funcs.html  bidsbuilder.interpreter.fields_funcs.html  bidsbuilder.interpreter.html  bidsbuilder.interpreter.operator_funcs.html  bidsbuilder.interpreter.selectors.html  bidsbuilder.modules.agnostic_files.html  bidsbuilder.modules.core.dataset_core.html  bidsbuilder.modules.core.dataset_tree.html  bidsbuilder.modules.core.filenames.html  bidsbuilder.modules.core.html  bidsbuilder.modules.dataset_core.html  bidsbuilder.modules.dataset_tree.html  bidsbuilder.modules.directories.html  bidsbuilder.modules.file_bases.agnostic_files.html  bidsbuilder.modules.file_bases.directories.html  bidsbuilder.modules.file_bases.html  bidsbuilder.modules.file_bases.json_files.html  bidsbuilder.modules.file_bases.tabular_files.html  bidsbuilder.modules.filenames.html  bidsbuilder.modules.html  bidsbuilder.modules.json_files.html  bidsbuilder.modules.schema_objects.html  bidsbuilder.modules.tabular_files.html  bidsbuilder.schema.html  (+14 more)
(+281 files in other folders)
