[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bidsbuilder"
version = "0.1.0"
dependencies = [
    "attrs>=25.3.0",
    "bidsschematools>=1.0.4",
    "mne>=1.9.0",
    "pandas>=2.2.3",
    "setuptools>=72.1.0",
    "typing_extensions>=4.13.2"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
docs = [
  "sphinx",
  "sphinx-autodoc-typehints"
]